<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/discover" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>

    <item android:title="@string/nav_drawer_new_or_existing_user">
        <menu>
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_add_black_24dp"
                android:title="@string/register"/>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/login" />
        </menu>
    </item>

</menu>
